# RusyESP32Clock

./: Cargo.toml  build.rs
Backend/: Backend.sln
Backend/HomeApi/: HomeApi.csproj
Backend/HomeApi/Controllers/: TimeController.cs  WeatherController.cs  WeatherImageController.cs
Backend/HomeApi/Services/: BmpService.cs  SvgService.cs
Backend/HomeApi/Services/Interfaces/: SvgViewModel.cs
Backend/HomeApi/Services/Sunup/: SunupService.cs
Backend/HomeApi/Services/WeatherImage/: WeatherImageService.cs
Backend/HomeApi/Templates/: WeatherDataFetcher.cs  WeatherViewModel.cs  WmoService.cs
Backend/HomeApi/ViewModel/: ErrorViewModel.cs  SunupViewModel.cs  WeatherImageViewModel.cs
Backend/Management/HomeApi/Controllers/: SunupController.cs
Backend/Management/HomeApi/Properties/: launchSettings.json
Backend/Management/HomeApi/Services/: SvgService.cs
Backend/Management/HomeApi/Services/Interfaces/: ISvgViewModel.cs
Backend/Management/HomeApi/Services/Sunup/: SunriseDataService.cs
Backend/Management/HomeApi/Services/WeatherImage/: WeatherDataService.cs  WeatherImageService.cs  WmoService.cs
Backend/Management/HomeApi/ViewModel/: WeatherImageViewModel.cs
Embedded/CYD/: .gitignore
Embedded/CYD/src/configuration/: setup_wifi.rs
Embedded/CYD/src/utils/: http_utils.rs  mod.rs  simple_error.rs
Frontend/management/: components.json  package-lock.json  package.json  tailwind.config.js
Frontend/management/src/: App.css  App.tsx  index.css
Frontend/management/src/components/: NavUser.tsx
Frontend/management/src/components/overrides/: OvSidebarGroup.tsx  OvSidebarLink.tsx  OvSidebarSectionTitle.tsx
Frontend/management/src/components/ui/: collapsible.tsx
Frontend/management/src/pages/: Devices.tsx  Home.tsx  Layout.tsx  NotFound.tsx
src/: font_bytes.rs  main.rs  main2.rs
src/configuration/: mod.rs  setup_display.rs  setup_wifi.rs
src/utils/: always_same.rs  http_utils.rs  image_utils.rs  mod.rs  screen_utils.rs  simple_error.rs
