[package]
name = "cyd"
version = "0.1.0"
authors = ["Martin <me@mart-e.be>", "Claus Näveke <claus+cyd@naeveke.de>"]
edition = "2021"
resolver = "2"
rust-version = "1.75"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4" }
esp-idf-svc = { version = "*", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
embedded-graphics = "0.8.1"
ili9341 = "0.6.0"
esp-idf-hal = "0.44.1"
mipidsi = "0.7.1"
esp-idf-sys = "*"
# incompatible with mipdsi 0.7.1 until https://github.com/almindor/mipidsi/pull/104
#display-interface = "0.5.0"
#display-interface-spi = "0.5.0"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
embedded-svc = "*"
anyhow = "*"
[build-dependencies]
#embuild = "0.31.4"
embuild = { version = "0.31.4", features = ["espidf"] }
