[package]
name = "RustyClock"
version = "0.0.1"
authors = ["WillJeynes (https://github.com/WillJeynes/)"]
edition = "2021"
resolver = "2"
rust-version = "1.75"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4.27" }
esp-idf-svc = { version = "0.49.1", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
embedded-graphics = "0.8.1"
ili9341 = "0.6.0"
esp-idf-hal = "0.44.1"
mipidsi = "0.7.1"
esp-idf-sys = "0.35.0"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
embedded-svc = "0.28.1"
anyhow = "1.0.97"
tinybmp = "0.6.0"
chrono = { version = "0.4.40", default-features = false, features = ["clock"] }
chrono-tz = "0.10.3"

[build-dependencies]
embuild = { version = "0.31.4", features = ["espidf"] }
